2021-10-27  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'mofed_5.4'

	fix MOFED build for 'srpt' in SCST; specify WARNINGS var for elxsdkutil (ocs_sdk.chroot)

2021-10-26  Marc A. Smith  <marc.smith@quantum.com>

	updated support for Mellanox OFED 5.4; updated SCST to version 3.5.x

2021-10-25  Marc A. Smith  <marc.smith@quantum.com>

	enabled the CONFIG_PCI_STUB and CONFIG_PCI_PF_STUB options as modules

2021-10-22  Marc A. Smith  <marc.smith@quantum.com>

	usb_sync.sh: during initial sync on new systems, set the Git name/email BEFORE running 'etckeeper init', swap tabs for spaces

2021-10-21  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'new_qla_fw'

	updated QLogic firmware to the latest version

2021-10-14  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'celer_clean_fix'

	fixed build issue for the Celerity FC driver

	Merge branch 'rc_network_sort'

	rc.network: updated to accept the "None" bootproto value which does not configure an IP address (no DHCP, no Static) and only sets the MTU of an interface, sort network.conf interface sections alphabetically so bondX's are configured before brX's

2021-10-13  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch '20211008_tweaks'

	applied several Makefile fixes/tweaks for kernel driver builds; updated sysctl.conf for virtual memory settings

2021-10-05  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'virbr_fix'

	rc.network: use '^' in front of each interface name regex match so we match starting from the beginning of the string (eg, so we don't match 'virbr0')

2021-09-30  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'add_cacerts'

	added the 'cacerts' package (SSL root CA certificates)

2021-09-28  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch 'add_wget'

	added the real 'wget' program and disabled the Busybox variant

2021-09-26  Marc A. Smith  <marc.smith@quantum.com>

	Merge branch '20210924_changes'
