@@ -11,7 +11,7 @@ QIB_LOAD=yes
 MLX4_LOAD=yes
 
 # Load MLX5 modules
-MLX5_LOAD=no
+MLX5_LOAD=yes
 
 # Load CXGB3 modules
 CXGB3_LOAD=yes
